Redirect to metastruct.net

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Gone
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="UTF-8">
+		<meta HTTP-EQUIV="REFRESH" content="6; url=http://metastruct.net">
+		<title>Meta Construct @ GitHub</title>
+	</head>
+	<body>
+		Redirecting you to <a href="http://metastruct.net">http://metastruct.net</a> &hellip;
+	</body>
+</html> 
