--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<meta HTTP-EQUIV="REFRESH" content="6; url=http://metastruct.net">
-		<title>Meta Construct @ GitHub</title>
-	</head>
-	<body>
-		Redirecting you to <a href="http://metastruct.net">http://metastruct.net</a> &hellip;
-	</body>
-</html> 
+        <head>
+                <meta charset="UTF-8">
+                <meta HTTP-EQUIV="REFRESH" content="1; url=http://metastruct.net">
+
+                <title>Meta Construct</title>
+		<meta name="description" content="A community dedicated to research and development of sandbox experiences"/>
+		<meta name="author" content="metastruct">
+	   	<meta name="keywords" content="garrysmod, sandbox, gaming, development, lua">
+        </head>
+        <body>
+                Redirecting you to <a href="http://metastruct.net">http://metastruct.net</a> &hellip;
+                <hr>
+                <br/>
+                <a rel="me" href="https://twitter.com/metastruct">Twitter</a>
+                <br/>
+                <a rel="me" href="https://mastodon.online/@metastruct">Mastodon</a>
+                <br/>
+        </body>
+</html>
